SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/Workout__c.object-meta.xml
<CustomObject>
    <label>Workout</label>
    <nameField>
        <displayFormat>W-{00000}</displayFormat>
        <label>Workout  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>