SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/fields/Bodyweight__c.field-meta.xml
<CustomField>
    <fullName>Bodyweight__c</fullName>
    <label>Bodyweight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>