SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/fields/Day_of_Workout1__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Workout1__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Day of Workout</label>
    <required>true</required>
    <type>Date</type>
</CustomField>