SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/fields/Set_Counts__c.field-meta.xml
<CustomField>
    <fullName>Set_Counts__c</fullName>
    <label>Sets</label>
    <summaryForeignKey>Exercise_Session__c.Workout__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>