SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/fields/Sum_of_Reps__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Reps__c</fullName>
    <label>Sum of Reps</label>
    <summarizedField>Exercise_Session__c.Reps__c</summarizedField>
    <summaryForeignKey>Exercise_Session__c.Workout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>