SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/fields/Type1__c.field-meta.xml
<CustomField>
    <fullName>Type1__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arms</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Circuit/Crossfit</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Full Body</fullName>
            </value>
            <value>
                <fullName>Legs</fullName>
            </value>
            <value>
                <fullName>Lowerbody</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pull</fullName>
            </value>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Shoulders</fullName>
            </value>
            <value>
                <fullName>Upperbody</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>