SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/fields/UserWorkout__c.field-meta.xml
<CustomField>
    <fullName>UserWorkout__c</fullName>
    <label>User</label>
    <referenceTo>UserWorkout__c</referenceTo>
    <relationshipLabel>Workouts</relationshipLabel>
    <relationshipName>Workouts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>