SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/fields/Weight_Lifted_Sum__c.field-meta.xml
<CustomField>
    <fullName>Weight_Lifted_Sum__c</fullName>
    <label>Weight Lifted Sum</label>
    <summarizedField>Exercise_Session__c.Weight__c</summarizedField>
    <summaryForeignKey>Exercise_Session__c.Workout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>