SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/fields/Workout_Length_C__c.field-meta.xml
<CustomField>
    <fullName>Workout_Length_C__c</fullName>
    <formula>TEXT(ROUND(((Workout_End_Time__c - Workout_Start_Time__c )*24*60), 0)) &amp; &quot; Minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workout Length.</label>
    <type>Text</type>
</CustomField>