SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/fields/Workout_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Workout_Start_Time__c</fullName>
    <label>Workout Start Time</label>
    <summarizedField>Exercise_Session__c.CreatedDate</summarizedField>
    <summaryForeignKey>Exercise_Session__c.Workout__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>