SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day_of_Workout1__c</columns>
    <columns>Type1__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>User__c</columns>
    <columns>UserWorkout__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>