SalesforceWorkoutLoggerApp/force-app/main/default/objects/Workout__c/listViews/Today_s_Workout.listView-meta.xml
<ListView>
    <fullName>Today_s_Workout</fullName>
    <columns>NAME</columns>
    <columns>Day_of_Workout1__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Day_of_Workout1__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Workout</label>
</ListView>